<resources>
    <string name="app_name">TODO_6</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="editText_main">Enter Your Text Here</string>
    <string name="text_header">Reply Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Text Here</string>
    <string name="text_header_reply"></string>
</resources>